fix: Deprecation warnings